--- a/css/dark.less
+++ b/css/dark.less
@@ -27,7 +27,11 @@
             h1 {
                 color: #fff;
             }
-    
+            
+            li {
+                color: #fff;    
+            }
+
             .call-now {
                 .light {
                     display: none;
@@ -37,11 +41,11 @@
                     display: inline-block;
                 }
                 .text {
-                    color: #fff;
+                     color: #fff;
                 }
     
                 .number {
-                    color: #fff;
+                     color: #fff;
                 }
             }
     
