--- a/css/root.less
+++ b/css/root.less
@@ -585,11 +585,12 @@
             position: absolute;
             left: 0px;
             height: 120/20em;
-            width: 180/20em;
+            width: 350/20em;
             top: 50%;
 			transform: translateY(-50%);
-            padding: 0;
-
+            padding-top: 4%;
+            padding-left: 0px;
+            font-size: 20px;
             &:before {
                 display: none;
             }
